setup livepoll